ci(renovate): allow any postUpgradeTasks command
Signed-off-by: Erik Godding Boye <egboye@gmail.com>

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -50,4 +50,4 @@ jobs:
           RENOVATE_ONBOARDING: "false"
           RENOVATE_PLATFORM: "github"
           LOG_LEVEL: "debug"
-          RENOVATE_ALLOWED_COMMANDS: '["make generate"]'
+          RENOVATE_ALLOWED_COMMANDS: '[".*"]'
