--- a/modules/repository-base/base-dependabot/.github/workflows/renovate.yaml
+++ b/modules/repository-base/base-dependabot/.github/workflows/renovate.yaml
@@ -53,4 +53,4 @@ jobs:
           RENOVATE_ONBOARDING: "false"
           RENOVATE_PLATFORM: "github"
           LOG_LEVEL: "debug"
-          RENOVATE_ALLOWED_COMMANDS: '["make generate"]'
+          RENOVATE_ALLOWED_COMMANDS: '[".*"]'
