--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,6 +2,7 @@
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   enabled: true,
   enabledManagers: [
+    'custom.regex',
     'gomod',
   ],
   extends: [
@@ -12,7 +13,25 @@
     ':prHourlyLimitNone',
   ],
   timezone: 'Europe/London',
+  customManagers: [
+    {
+      customType: 'regex',
+      managerFilePatterns: [
+        '*',
+      ],
+      matchStrings: [
+        '(?:^|\\r\\n|\\r|\\n)#\\s*renovate:\\s*datasource=(?<datasource>\\S+)\\s+packageName=(?<packageName>\\S+)(?:^|\\r\\n|\\r|\\n)tools \\+= \\S+=(?<currentValue>\\S+)'
+      ],
+      versioningTemplate: '{{#if versioning}}{{{versioning}}}{{else}}semver-coerced{{/if}}',
+    },
+  ],
   packageRules: [
+    {
+      groupName: 'Tools',
+      matchPackageNames: [
+        '*',
+      ]
+    },
     {
       groupName: 'Misc Go deps',
       matchManagers: [
