ci(renovate): add markers for all tools marked with GH release as source
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,17 +17,19 @@
     {
       customType: 'regex',
       managerFilePatterns: [
-        '*',
+        'modules/tools/**',
       ],
       matchStrings: [
         '(?:^|\\r\\n|\\r|\\n)#\\s*renovate:\\s*datasource=(?<datasource>\\S+)\\s+packageName=(?<packageName>\\S+)(?:^|\\r\\n|\\r|\\n)tools \\+= \\S+=(?<currentValue>\\S+)'
       ],
-      versioningTemplate: '{{#if versioning}}{{{versioning}}}{{else}}semver-coerced{{/if}}',
     },
   ],
   packageRules: [
     {
       groupName: 'Tools',
+      matchManagers: [
+        'custom.regex',
+      ],
       matchPackageNames: [
         '*',
       ]
