ci(renovate): add 'make learn-tools-shas' to post upgrade tasks
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -24,6 +24,12 @@
       ],
     },
   ],
+  postUpgradeTasks: {
+    commands: [
+      'make learn-tools-shas',
+    ],
+    executionMode: 'branch',
+  },
   packageRules: [
     {
       groupName: 'Tools',
