ci(renovate): add 'make vendor-go' to post upgrade tasks
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,7 +26,7 @@
   ],
   postUpgradeTasks: {
     commands: [
-      'make learn-tools-shas',
+      'make vendor-go learn-tools-shas',
     ],
     executionMode: 'branch',
   },
