ci(renovate): add additional regex to match more tools versions
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,7 +20,8 @@
         'modules/tools/**',
       ],
       matchStrings: [
-        '(?:^|\\r\\n|\\r|\\n)#\\s*renovate:\\s*datasource=(?<datasource>\\S+)\\s+packageName=(?<packageName>\\S+)(?:^|\\r\\n|\\r|\\n)tools \\+= \\S+=(?<currentValue>\\S+)'
+        '(?:^|\\r\\n|\\r|\\n)#\\s*renovate:\\s*datasource=(?<datasource>\\S+)\\s+packageName=(?<packageName>\\S+)(?:^|\\r\\n|\\r|\\n)\\S+ \\+= \\S+=(?<currentValue>\\S+)',
+        '(?:^|\\r\\n|\\r|\\n)#\\s*renovate:\\s*datasource=(?<datasource>\\S+)\\s+packageName=(?<packageName>\\S+)(?:^|\\r\\n|\\r|\\n)\\S+ := (?<currentValue>\\S+)'
       ],
     },
   ],
