ci(renovate): add group for Go testing dependencies
Signed-off-by: Erik Godding Boye

--- a/modules/repository-base/base-dependabot/.github/renovate.json5
+++ b/modules/repository-base/base-dependabot/.github/renovate.json5
@@ -40,6 +40,17 @@
       ],
     },
     {
+      groupName: 'Testing Go deps',
+      matchManagers: [
+        'gomod',
+      ],
+      matchPackageNames: [
+        'github.com/onsi/ginkgo**/**',
+        'github.com/onsi/gomega**/**',
+        'github.com/stretchr/testify**/**',
+      ],
+    },
+    {
       groupName: 'Cloud Go deps',
       matchManagers: [
         'gomod',
