Enable Renovate for GH actions
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,7 @@
   enabled: true,
   enabledManagers: [
     'custom.regex',
+    'github-actions',
     'gomod',
   ],
   extends: [
@@ -31,7 +32,23 @@
     ],
     executionMode: 'branch',
   },
+  baseBranchPatterns: [
+    'main',
+    'octo-sts-poc',
+  ],
   packageRules: [
+    {
+      matchBaseBranches: [
+        'octo-sts-poc',
+      ],
+      enabled: false, // Disable upgrades in general for the octo-sts-poc branch.
+    },
+    {
+      matchManagers: [
+        'github-actions',
+      ],
+      enabled: false, // Disable the github-actions in general to enable it for more specific configuration.
+    },
     {
       groupName: 'Tools',
       matchManagers: [
@@ -40,6 +57,19 @@
       matchPackageNames: [
         '*',
       ]
+    },
+    {
+      groupName: 'Misc GitHub actions',
+      matchManagers: [
+        'github-actions',
+      ],
+      matchPackageNames: [
+        '*',
+      ],
+      enabled: true,
+      matchBaseBranches: [
+        'octo-sts-poc',
+      ],
     },
     {
       groupName: 'Misc Go deps',
