--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,7 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   enabled: true,
+  gitAuthor: 'cert-manager-bot <cert-manager-bot@users.noreply.github.com>',
   enabledManagers: [
     'custom.regex',
     'github-actions',
