ci(renovate): dependencyDashboardApproval for major/digest upgrades
Signed-off-by: Erik Godding Boye

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -73,6 +73,17 @@
         'gomod',
       ],
     },
+    {
+      matchManagers: [
+        'custom.regex',
+        'gomod',
+      ],
+      matchUpdateTypes: [
+        'major',
+        'digest',
+      ],
+      dependencyDashboardApproval: true
+    }
   ],
   ignorePaths: [
     '**/vendor/**',
