ci(renovate): fix digest K8s dependencies
Signed-off-by: Erik Godding Boye <egboye@gmail.com>

--- a/modules/repository-base/base-dependabot/.github/renovate.json5
+++ b/modules/repository-base/base-dependabot/.github/renovate.json5
@@ -85,6 +85,10 @@
         'sigs.k8s.io/**',
         'k8s.io/**',
       ],
+      matchUpdateTypes: [
+        'minor',
+        'patch',
+      ]
     },
     {
       groupName: 'Kubernetes Go patches',
